...
              zero.layout.flex.spaceBetween,
              zero.layout.flex.alignCenter,
              zero.mb[4],
            ]}
          >
            <Text size="4xl" leading="snug">
              {pdsMode ? "Sign in" : "Log in"}
            </Text>
            <TouchableOpacity
              onPress={onClose}
              hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
            >
              <X color={theme.colors.text3} size={24} />
...
