...
              >
                <AtSign size={20} color={theme.colors.text2} />
              </View>
            )}
          </View>
          <Input
            testID="login-handle"
            value={handle}
            onChangeText={(text) =>
              setHandle(
                text
                  .toLowerCase()
                  .replace(/[\u202A\u202C\u200E\u200F\u2066-\u2069]/g, "")
...
