...
              placeholderTextColor={theme.colors.text3}
              onSubmitEditing={submit}
            />,
          )}
          {field(
            <Lock size={16} color={theme.colors.primary} />,
            "Password",
            <TextInput
              placeholder="Your password"
              value={password}
              onChangeText={setPassword}
              secureTextEntry
              textContentType="password"
...
