...
            <MenuGroup>
              <SettingsRowItem>
                <View style={{ flex: 1 }}>
                  <Text size="lg">Node</Text>
                </View>
                <View style={{ alignItems: "flex-end", flexShrink: 1 }}>
                  <Text size="lg" color="muted" testID="about-node-title">
                    {nodeTitle}
                  </Text>
                </View>
              </SettingsRowItem>
              <MenuSeparator />
              <StreamplaceVersionRow />
...
