...
                    })}
                    value={autoPublishVodsOn}
                    disabled={saving}
                    onValueChange={(value) =>
                      saveSetting({ autoPublishVods: value })
                    }
                    testID="settings-auto-publish-vods"
                  />
                </>
              )}
            </MenuGroup>
          </MenuContainer>
        </View>
...
