...
        ]}
      >
        <View style={[zero.r.full]}>
          <Video size={48} color={theme.theme.colors.text1} />
        </View>
        <Text size="2xl" weight="semibold" center>
          Ready to go live?
        </Text>
      </View>
      <View style={[zero.layout.flex.center]}>
        <Button
          size="lg"
          width="min"
          onPress={() => {
            navigation.navigate("MobileGoLive");
          }}
          leftIcon={<RadioTower color={theme.theme.colors.primaryForeground} />}
        >
          Start streaming
        </Button>
      </View>
    </View>
  );

  if (!social) return body;
...
