...
  horizontal?: boolean;
  showAvatar?: boolean;
}) {
  const user = item.author.handle || item.author.did;
  return (
    <AQLink
      testID="home-stream-card"
      to={{
        screen: "Stream",
        params: {
          user: user,
        },
      }}
...
